tests/ui/never_type/impl_trait_fallback4.stderr
error[E0277]: the trait bound `(): T` is not satisfied
  --> $DIR/impl_trait_fallback4.rs:13:13
   |
LL | fn foo() -> impl T {
   |             ^^^^^^ the trait `T` is not implemented for `()`
LL |
LL |     panic!()
   |     -------- return type was inferred to be `_` here
   |
help: this trait has no implementations, consider adding one
  --> $DIR/impl_trait_fallback4.rs:3:1
   |
LL | trait T {
   | ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
